tests/error/type_match/typename_array2.bz
// error: couldn't match the function call to the function
// note: function argument types are 'typename'
// note: candidate: 'function test1(T: [??: *typename]) -> void'
function test1(T: [??: *typename]);

function test()
{
	test1([7: i32]);
}
